Throw on redundant options